# Hope_Genome

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CLAUDE_TETTE_AMIT_MONDTAM.md  CONTEXT_FOR_CLAUDE.md  CREDITS.md  DOCKER_OWASP_INTEGRATION.md  Dockerfile  EMAIL_INFLUENCERS.md  LICENSE  MANIFESTO_MATE_CLAUDE.md  MARKETING_READY.md  POSTS_HACKER_NEWS.md  POSTS_LINKEDIN_7_NAP.md  POSTS_PRODUCT_HUNT.md  POSTS_REDDIT.md  POSTS_TWITTER_30.md  PUBLISHING.md  README.md  README_DEMO.md  RED_TEAM_AUDIT_2025_12_30.md  RELEASE_NOTES_v1.5.0.md  RELEASE_v2.3.0.md  SECURITY.md  SOUL_MEMORY_SHARED.md  START_HUB.bat  START_MONITOR.bat  START_TRINITY.bat  START_TRINITY_HUB.bat  TRINITY.bat  architect_genesis.rs  docker-compose.yml  docker-entrypoint.sh  docker-test.sh  pyproject.toml  setup.sh  trinity_cli.py  trinity_dashboard.py
.claude/: settings.local.json
.github/workflows/: ci.yml  docs.yml  publish-pypi.yml  wheels.yml
challenge/: LINKEDIN_POST.md  README.md  challenge_log.json  generate_challenge.py  public_key.txt  verify.py
demo/: REPRODUCE.md  api_integrations_demo.py  brutal_code_training.py  gunproof_live.py  langchain_watchdog_demo.py  manifesto.py  master_training_system.py  stress_test.py  tiny_master.py  tiny_master_v10_absolute.py  tiny_master_v11_omega.py  tiny_master_v12_hybrid_perfect.py  tiny_master_v12_llama3_100.py  tiny_master_v12_mistral_100.py  tiny_master_v12_perfect_100.py  tiny_master_v12_ultra_perfect.py  tiny_master_v13_titanium.py  tiny_master_v2.py  tiny_master_v3_brutal.py  tiny_master_v4_ultimate.py  tiny_master_v5_insane.py  tiny_master_v6_impossible.py  tiny_master_v7_maximum.py  tiny_master_v8_legendary.py  tiny_master_v9_transcendent.py  video_demo.py
demo/brain/: Dockerfile  main.py
demo_audit_chain/: AUDIT_EXPORT.md  DENIAL_1767280077634.json  DENIAL_1767280077736.json  chain.json
docs/: TITANIUM_GAUNTLET_RESULTS.md
examples/: auto_phoenix_loop.py  basic_usage.rs  fastapi_integration.py  langchain_integration.py  medical_ai_demo.rs  openai_integration.py  test_watchdog_phi_provocation.py
hope_core/: AIBOM_INTEGRATION.md  CHANGELOG.md  Cargo.toml  Dockerfile  OWASP_COMPLIANCE_REPORT.md  OWASP_EXECUTIVE_SUMMARY.md  README.md  SECURITY.md  audit.toml  docker-compose.yml
hope_core/examples/: architect_genesis.rs  compliance_demo.rs  example_model.aibom.json
hope_core/python/hope_genome/: blockchain_audit.py
hope_core/src/: apex_protocol.rs  audit_log.rs  auditor.rs  bft_watchdog.rs  canonicalize.rs  compliance.rs  consensus.rs  crypto.rs  crypto_hsm.rs  crypto_tee.rs  evolutionary_guard.rs  executor.rs  genome.rs  lib.rs  merkle_audit.rs  mesh_capsule.rs  nonce_store.rs  panic_integrity.rs  proof.rs  watchdog.rs  zkp.rs
hope_core/src/adaptive/: mod.rs
hope_core/src/diamond/: constraint_decoder.rs  formal_spec.rs  mod.rs  proof_chain.rs  tee_enclave.rs  zk_snark.rs
hope_core/src/fhe/: mod.rs
hope_core/src/interpretability/: mod.rs
hope_core/src/manifold/: consciousness_proof.rs  ethical_topology.rs  genesis_core.rs  mod.rs  weight_crystallization.rs
hope_core/src/pqc/: mod.rs
hope_core/src/python/: action.rs  aibom.rs  auditlog.rs  auditor.rs  consensus.rs  errors.rs  genome.rs  keystore.rs  merkle_audit.rs  mod.rs  noncestore.rs  proof.rs  watchdog.rs
hope_core/src/semantic/: mod.rs
hope_core/src/tee/: mod.rs
hope_core/src/transcendence/: cross_model.rs  explainability.rs  global_reputation.rs  hardware_tee.rs  interactive_verification.rs  mod.rs  privacy_governance.rs  regulatory.rs  self_amending.rs  temporal_proofs.rs
hope_core/tests/: security_tests.rs
hope_python/: Cargo.toml  README.md  pyproject.toml
hope_python/examples/: basic_usage.py
hope_python/python/hope_genome/: __init__.py
hope_python/src/: lib.rs
hope_python/tests/: test_basic.py
paper/: hope_genome_arxiv.tex
portable_monitor/: AI_Monitor_Szilvi.spec  BUILD_EXE.bat  FUTTATAS.bat  README.txt  ai_monitor.py
python/hope_genome/: __init__.py  __init__.pyi
python/hope_genome/integrations/: __init__.py  anthropic_watchdog.py  base.py  deepseek_watchdog.py  factory.py  gemini_watchdog.py  grok_watchdog.py  kimi_watchdog.py  langchain_watchdog.py  mistral_watchdog.py  ollama_watchdog.py  openai_watchdog.py  perplexity_watchdog.py
tests/: test_hope_genome.py
tests/.claude/: settings.local.json
trinity/: AI_SYNC.md  CLAUDE_INSTRUCTIONS.md  CLAUDE_OUTPUT.md  CLAUDE_SEES.txt  GEMINI_INSTRUCTIONS.md  GEMINI_OUTPUT.md  MATE_INPUT.md  README.md  TRINITY_HUB.md  claude_watch.py  hub_watcher.py
trinity/mcp_server/: claude_client.py  gemini_client.py  hub_client.py  live_monitor.py  trinity_core.py
