[package]
name = "hope_core"
version = "1.3.0"
edition = "2021"
authors = ["Máté Róbert <stratosoiteam@gmail.com>"]
description = "Tamper-evident cryptographic framework for AI accountability"
license = "MIT"
repository = "https://github.com/silentnoisehun/Hope-Genome"
keywords = ["ai-safety", "cryptography", "audit", "blockchain", "ethics"]
categories = ["cryptography", "science"]

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
rsa = "0.9"
sha2 = "0.10.8"
rand = "0.8"
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "2.0.3"
hex = "0.4.3"
unicode-normalization = "0.1.24"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "hope_core"
path = "src/lib.rs"
