[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "hope-genome"
version = "1.2.0"
description = "Tamper-Evident Cryptographic Framework for AI Accountability"
authors = [
    {name = "Máté Róbert", email = "stratosoiteam@gmail.com"},
    {name = "Claude", email = "noreply@anthropic.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["ai-safety", "cryptography", "blockchain", "audit", "ethics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
]

[project.urls]
Homepage = "https://github.com/silentnoisehun/Hope_Genome"
Repository = "https://github.com/silentnoisehun/Hope_Genome"
Documentation = "https://github.com/silentnoisehun/Hope_Genome#readme"
"Bug Tracker" = "https://github.com/silentnoisehun/Hope_Genome/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "hope_genome._hope_genome"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
